# resourceschedule_soc_perf

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_ZH.md  bundle.json  soc_perf.gni
common/include/: socperf_log.h  socperf_lru_cache.h  socperf_trace.h
interfaces/inner_api/socperf_client/: BUILD.gn  ISocPerf.idl  libsocperf_client.versionscript
interfaces/inner_api/socperf_client/include/: i_socperf_service.h  socperf_action_type.h  socperf_client.h  socperf_ipc_interface_code.h  socperf_proxy.h
interfaces/inner_api/socperf_client/src/: socperf_client.cpp  socperf_proxy.cpp
patches/: patches.json  resourceschedule_resource_schedule_service.patch
sa_profile/: 1906.json
services/: BUILD.gn  libsocperf_server.versionscript
services/core/include/: socperf.h  socperf_common.h  socperf_config.h  socperf_thread_wrap.h
services/core/src/: socperf.cpp  socperf_config.cpp  socperf_thread_wrap.cpp
services/dfx/include/: socperf_hitrace_chain.h
services/dfx/src/: socperf_hitrace_chain.cpp
services/server/include/: socperf_server.h  socperf_stub.h
services/server/src/: socperf_server.cpp  socperf_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/include/: socperf_fuzz_mock.h
test/fuzztest/limitrequest_fuzzer/: BUILD.gn  limitrequest_fuzzer.cpp  limitrequest_fuzzer.h
test/fuzztest/loadconfigxmlfile_fuzzer/: BUILD.gn  loadconfigxmlfile_fuzzer.cpp
test/fuzztest/perfrequest_fuzzer/: BUILD.gn  perfrequest_fuzzer.cpp
test/fuzztest/perfrequest_fuzzer/corpus/: init
test/fuzztest/perfrequestex_fuzzer/: BUILD.gn  perfrequestex_fuzzer.cpp  perfrequestex_fuzzer.h
test/fuzztest/powerlimitboost_fuzzer/: BUILD.gn  powerlimitboost_fuzzer.cpp  powerlimitboost_fuzzer.h
test/fuzztest/requestcmdidcount_fuzzer/: BUILD.gn  requestcmdidcount_fuzzer.cpp  requestcmdidcount_fuzzer.h
test/fuzztest/requestdevicemode_fuzzer/: BUILD.gn  requestdevicemode_fuzzer.cpp  requestdevicemode_fuzzer.h
test/fuzztest/setstatus_fuzzer/: BUILD.gn  project.xml  setstatus_fuzzer.cpp  setstatus_fuzzer.h
test/fuzztest/setthermallevel_fuzzer/: BUILD.gn  setthermallevel_fuzzer.cpp  setthermallevel_fuzzer.h
test/fuzztest/soc_fuzzer/: BUILD.gn  soc_fuzzer.cpp  soc_fuzzer.h
test/fuzztest/socperf_fuzzer/: BUILD.gn  socperf_fuzzer.cpp
test/fuzztest/thermallimitboost_fuzzer/: BUILD.gn  thermallimitboost_fuzzer.cpp  thermallimitboost_fuzzer.h
test/testutil/: BUILD.gn  socperf_test.cpp
test/unittest/: BUILD.gn  socperf_lru_cache_test.cpp  socperf_server_test.cpp  socperf_sub_mock_test.cpp  socperf_sub_test.cpp
test/unittest/dfx/: socperf_hitrace_chain_test.cpp
test/unittest/mock/: mock_socperf_client.cpp  mock_system_ability.cpp
