# Copyright (c) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../soc_perf.gni")

##############################fuzztest##########################################
ohos_fuzztest("RequestDeviceModeFuzzTest") {
  module_out_path = "soc_perf/soc_perf"
  fuzz_config_file = "${socperf_test}/fuzztest/requestdevicemode_fuzzer"
  include_dirs = [
    "${socperf_services}/server/include",
    "${socperf_test}/fuzztest/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "requestdevicemode_fuzzer.cpp" ]

  deps = [
    "${socperf_interfaces}/inner_api/socperf_client:socperf_client",
    "${socperf_services}:socperf_server_static",
  ]

  external_deps = [ "hilog:libhilog" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":RequestDeviceModeFuzzTest",
  ]
}
###############################################################################
